<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="196dp"
        android:layout_marginBottom="77dp"
        android:contentDescription="@string/test_logo"
        android:rotation="-33"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/airplane" />

<!--    <Button-->
<!--        android:id="@+id/button2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="291dp"-->
<!--        android:layout_marginBottom="169dp"-->
<!--        android:layout_marginTop="486dp"-->
<!--        android:backgroundTint="#000000"-->
<!--        android:onClick="OnSearchClick"-->
<!--        android:text="@string/search"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/editText"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/imageView4" />-->

    <EditText
        android:id="@+id/editText"
        android:layout_width="348dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="88dp"
        android:layout_marginTop="395dp"
        android:hint="@string/flightnumber"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/transparent"
        android:contentDescription="@string/account"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="86dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="114dp"
        android:text="@string/flightscope"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />
</FrameLayout>